Got the UI for the Payments by Order working from the previous branch.  Still need to update the Payment by Order modal to match the new payment modal with the 'visible to venues' and 'attach vat invoice' checkboxes.  Then, need to make sure that all info, including the order listing, gets passed to the Make Payment ajax routine.

--- a/includes/style/scss/thetaste-venue.scss
+++ b/includes/style/scss/thetaste-venue.scss
@@ -8,7 +8,7 @@ $spacers: (
 		(
 			10%,
 		)
-		// 80% -> form inputs became 10% shorter on width from each side,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+		// 80% -> form inputs became 10% shorter on width from each side,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 );
 
 @import "../bootstrap/scss/bootstrap";
@@ -200,6 +200,10 @@ h2.col-heading_profile {
 	max-height: 560px;
 }
 
+#orders-payment-table-container {
+	max-height: 320px;
+}
+
 .table-fixed-container {
 	overflow-y: scroll;
 	border: none;
@@ -219,6 +223,41 @@ h2.col-heading_profile {
 	position: sticky;
 	bottom: 0;
 	z-index: 2;
+}
+
+.ttoggle-container {
+	justify-content: start;
+	margin-top: 20px;
+}
+
+.ttoggle {
+	width: 240px;
+	height: 80px;
+	padding: 20px;
+}
+
+.ttoggle > .toggle-btn {
+	width: 100%;
+	height: 100%;
+	font-weight: bold;
+	font-size: 1.1rem;
+	border-radius: 6px;
+	background-color: #ddd;
+	transition: all 0.1s ease;
+}
+
+.toggle-btn.toggle-on,
+.toggle-btn:active,
+.toggle-btn.toggle-on:disabled {
+	background-color: #28a745;
+	box-shadow: inset 1px 1px 10px #333;
+	font-weight: bold;
+	cursor: default;
+	color: initial;
+}
+
+.toggle-btn:not(.toggle-on):hover:not(:active) {
+	border: 3px solid darkgreen;
 }
 
 .table-total-label {
@@ -583,7 +622,8 @@ body.campaign-manager {
 	}
 
 	.fa-check-circle,
-	.fa-times-circle {
+	.fa-times-circle,
+	.payment-due-status .fa-minus-circle {
 		font-size: 20px;
 	}
 
@@ -625,6 +665,10 @@ body.campaign-manager {
 		border: none;
 		color: #4dcfe0;
 		font-weight: bold;
+
+		.fa-eye {
+			font-size: 20px;
+		}
 	}
 
 	button.view_offer:hover {
